Add error on purpose

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-title></app-title>
-<app-timeline></app-timeline>
-<app-footer></app-footer>
+@if (flag) {
+  <app-title ></app-title>
+  <app-timeline ></app-timeline>
+  <app-footer></app-footer>
+}
