--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: "League Spartan";
+  src: url("assets/fonts/LeagueSpartan-VariableFont_wght.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("assets/fonts/Montserrat-VariableFont_wght.ttf") format("truetype");
+}
+
+$main: #5e17eb;
+
+body {
+  background-color: #f1f1f1;
+  font-family: "Montserrat", Verdana, sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  color: #1b1b1b;
+}
+
+h1 {
+  font-family: "League Spartan", Verdana, sans-serif;
+  color: $main;
+}
