feat: add picture and update favicon

--- a/src/app/title/picture/picture.component.html
+++ b/src/app/title/picture/picture.component.html
@@ -1,1 +1,7 @@
 <p>picture works!</p>
+
+<img alt="portrait of Etienne" ngSrc="./assets/portrait/824x1030.jpg" width="824" height="1030" priority srcset="
+  ./assets/portrait/206x258.jpg 206w,
+  ./assets/portrait/412x515.jpg 412w,
+  ./assets/portrait/824x1030.jpg 824w
+  ">
