--- a/src/app/title/picture/picture.component.html
+++ b/src/app/title/picture/picture.component.html
@@ -1,7 +1,9 @@
-<p>picture works!</p>
-
-<img alt="portrait of Etienne" ngSrc="./assets/portrait/824x1030.jpg" width="824" height="1030" priority srcset="
-  ./assets/portrait/206x258.jpg 206w,
-  ./assets/portrait/412x515.jpg 412w,
-  ./assets/portrait/824x1030.jpg 824w
+<div class="container">
+  <div class="pattern"></div>
+  <img alt="portrait of Etienne" priority srcset="
+  ./assets/portrait/205.jpg 400w,
+  ./assets/portrait/410.jpg 790w,
   ">
+  <!-- Keep it here might be useful in the future -->
+  <!-- ./assets/portrait/820.jpg  -->
+</div>
