--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,3 +1,4 @@
-<p>title works!</p>
-<h1> Etienne FRANK </h1>
 <app-picture />
+<h1> Etienne FRANK </h1>
+<p><span class="bold">Frontend developer</span> ~ Clean code Enthusiate ~ Curiosity hoarder ~ Movie enjoyer ~
+  Photographer hobbist ~ Web articles digger</p>
