feat: add most of the text
Add contact
Add languages
Add skills
Add experiences
Add education
Add WIP projects

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<app-title></app-title>
-<app-timeline></app-timeline>
-<app-footer></app-footer>
+<app-picture />
+<app-title />
+<app-contact-table />
+<app-languages />
+<app-skills />
+<app-experiences />
+<app-education />
+<app-projects />
+<!-- TODO once first version, then create a clean timeline -->
+<!-- <app-timeline /> -->
