--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,4 +1,3 @@
-<app-picture />
 <h1> Etienne FRANK </h1>
 <p><span class="bold">Frontend developer</span> ~ Clean code Enthusiate ~ Curiosity hoarder ~ Movie enjoyer ~
-  Photographer hobbist ~ Web articles digger</p>
+  Photographer hobbist ~ Web articles digger ~ TBD</p>
