--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -1,14 +1,8 @@
-:host {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+h1 {
+  text-align: center;
 }
 
 p {
   max-width: 500px;
   text-align: center;
-}
-
-.bold {
-  font-weight: 700;
 }
