WIP prettier for html + first project cards

--- a/src/app/experiences/experiences.component.html
+++ b/src/app/experiences/experiences.component.html
@@ -1,95 +1,93 @@
 <h2>Work Experience</h2>
 
 <ul class="main-list">
-  <li class="experience">
-    <div class="company">
-      <a href="https://www.bit.admin.ch/bit/en/home.html">FOITT</a> | September 2020 – Current
-    </div>
-    <div class="position bold">
-      Frontend Engineer
-    </div>
-    <div class="details">
-      <ul>
-        <li>
-          Implement features and refactor legacy code in <a href="https://eportal.admin.ch/start">ePortal</a> a Swiss
-          government portal that helps people fill forms related to taxes, value-added taxes, and customs services.
-        </li>
-        <li>
-          Setup Pull Request process with default reviewers and a running pipeline.
-        </li>
-        <li>
-          Promote a unit testing culture. Implement rules to ensure at least 80% coverage for new code and fix SonarQube
-          errors to achieve an A grade.
-        </li>
-        <li>
-          Set up developer environment to enable easy accessibility testing on different operating systems
-          (Windows/MacOS).
-        </li>
-        <li>
-          Maintain a developer channel for sharing web development-related news.
-        </li>
-      </ul>
-    </div>
-  </li>
+	<li class="experience">
+		<div class="company">
+			<a href="https://www.bit.admin.ch/bit/en/home.html">FOITT</a> | September
+			2020 – Current
+		</div>
+		<div class="position bold">Frontend Engineer</div>
+		<div class="details">
+			<ul>
+				<li>
+					Implement features and refactor legacy code in
+					<a href="https://eportal.admin.ch/start">ePortal</a> a Swiss
+					government portal that helps people fill forms related to taxes,
+					value-added taxes, and customs services.
+				</li>
+				<li>
+					Setup Pull Request process with default reviewers and a running
+					pipeline.
+				</li>
+				<li>
+					Promote a unit testing culture. Implement rules to ensure at least 80%
+					coverage for new code and fix SonarQube errors to achieve an A grade.
+				</li>
+				<li>
+					Set up developer environment to enable easy accessibility testing on
+					different operating systems (Windows/MacOS).
+				</li>
+				<li>
+					Maintain a developer channel for sharing web development-related news.
+				</li>
+			</ul>
+		</div>
+	</li>
 
-  <li class="experience">
-    <div class="company">
-      <a href="https://www.nagra.com/">NAGRA</a>, Kudelski Group | January 2020 – 2020
-    </div>
-    <div class="position bold">
-      System Validation Engineer
-    </div>
-    <div class="details">
-      <ul>
-        <li>
-          Supporting developers by providing automated tests and reports on discovered bugs. (Technologies: ReadyAPI)
-        </li>
-      </ul>
-    </div>
-  </li>
+	<li class="experience">
+		<div class="company">
+			<a href="https://www.nagra.com/">NAGRA</a>, Kudelski Group | January 2020
+			– 2020
+		</div>
+		<div class="position bold">System Validation Engineer</div>
+		<div class="details">
+			<ul>
+				<li>
+					Supporting developers by providing automated tests and reports on
+					discovered bugs. (Technologies: ReadyAPI)
+				</li>
+			</ul>
+		</div>
+	</li>
 
-  <li class="experience">
-    <div class="company">
-      <a href="https://www.he-arc.ch/en/">HE-Arc</a> | November 2016 – 2019
-    </div>
-    <div class="position bold">
-      AI Research Assistant
-    </div>
-    <div class="details">
-      <ul>
-        <li>
-          Implemented AI models for various projects, such as developing a virtual guitar teacher. (Technologies:
-          Python)
-        </li>
-        <li>
-          Setup GitLab for the university.
-        </li>
-        <li>
-          Improved the university inventory software and involved students in the project to teach them best practices
-          in project management and teamwork. (Technologies: Laravel/SQL)
-        </li>
-      </ul>
-    </div>
-  </li>
+	<li class="experience">
+		<div class="company">
+			<a href="https://www.he-arc.ch/en/">HE-Arc</a> | November 2016 – 2019
+		</div>
+		<div class="position bold">AI Research Assistant</div>
+		<div class="details">
+			<ul>
+				<li>
+					Implemented AI models for various projects, such as developing a
+					virtual guitar teacher. (Technologies: Python)
+				</li>
+				<li>Setup GitLab for the university.</li>
+				<li>
+					Improved the university inventory software and involved students in
+					the project to teach them best practices in project management and
+					teamwork. (Technologies: Laravel/SQL)
+				</li>
+			</ul>
+		</div>
+	</li>
 
-  <li class="experience">
-    <div class="company">
-      <a href="https://bluestar.solutions/">Bluestar</a> | May 2016 – 2016
-    </div>
-    <div class="position bold">
-      Business Software Developer
-    </div>
-    <div class="details">
-      <ul>
-        <li>
-          I worked on an ERP for a health organization, focusing on the billing system and managing appointments with
-          patients. (Technologies: Odoo and Python)
-        </li>
-        <li>
-          I worked on migrating a legacy software to a new web application for a real estate agency. (Technologies: Ruby
-          On Rails, SQL)
-        </li>
-      </ul>
-    </div>
-  </li>
+	<li class="experience">
+		<div class="company">
+			<a href="https://bluestar.solutions/">Bluestar</a> | May 2016 – 2016
+		</div>
+		<div class="position bold">Business Software Developer</div>
+		<div class="details">
+			<ul>
+				<li>
+					I worked on an ERP for a health organization, focusing on the billing
+					system and managing appointments with patients. (Technologies: Odoo
+					and Python)
+				</li>
+				<li>
+					I worked on migrating a legacy software to a new web application for a
+					real estate agency. (Technologies: Ruby On Rails, SQL)
+				</li>
+			</ul>
+		</div>
+	</li>
 </ul>
