--- a/src/app/languages/languages.component.html
+++ b/src/app/languages/languages.component.html
@@ -1,7 +1,8 @@
 <h2>Languages</h2>
 
 <p>
-  I'm fluent in <span class="bold">French</span> and <span class="bold">English</span>, and I can engage in small talk
-  in German. I also hold three nationalities: Swiss, French, and German, which might come in handy if I ever decide to
-  become a spy (just kidding).
+	I'm fluent in <span class="bold">French</span> and
+	<span class="bold">English</span>, and I can engage in small talk in German. I
+	also hold three nationalities: Swiss, French, and German, which might come in
+	handy if I ever decide to become a spy (just kidding).
 </p>
