--- a/src/app/projects/card/card.component.html
+++ b/src/app/projects/card/card.component.html
@@ -1,7 +1,7 @@
-<div class="card">
-  <a href="#">
-    <div>image</div>
-    <div>title</div>
-    <div>content</div>
-  </a>
-</div>
+<a [href]="url">
+	<div class="card">
+		<!-- <div>{{image}}</div> -->
+		<!-- <div>title</div> -->
+		<div class="text">{{ text }}</div>
+	</div>
+</a>
