--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,3 +1,6 @@
-<h1> Etienne FRANK </h1>
-<p><span class="bold">Frontend developer</span> ~ Clean code Enthusiate ~ Curiosity hoarder ~ Movie enjoyer ~
-  Photographer hobbist ~ Web articles digger ~ TBD</p>
+<h1>Etienne FRANK</h1>
+<p>
+	<span class="bold">Frontend developer</span> ~ Clean code Enthusiate ~
+	Curiosity hoarder ~ Movie enjoyer ~ Photographer hobbist ~ Web articles digger
+	~ TBD
+</p>
