--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,19 +1,11 @@
 <h2>Education</h2>
 <ul>
-  <li>
-    <div>
-      HES-SO | 2016
-    </div>
-    <div class="bold">
-      Master of Computer Science
-    </div>
-  </li>
-  <li>
-    <div>
-      HE-Arc | 2014
-    </div>
-    <div class="bold">
-      Bachelor of Computer Science
-    </div>
-  </li>
+	<li>
+		<div>HES-SO | 2016</div>
+		<div class="bold">Master of Computer Science</div>
+	</li>
+	<li>
+		<div>HE-Arc | 2014</div>
+		<div class="bold">Bachelor of Computer Science</div>
+	</li>
 </ul>
