--- a/src/app/picture/picture.component.html
+++ b/src/app/picture/picture.component.html
@@ -1,9 +1,10 @@
 <div class="container">
-  <div class="pattern"></div>
-  <img alt="portrait of Etienne" priority srcset="
-  ./assets/portrait/205.jpg 400w,
-  ./assets/portrait/410.jpg 790w,
-  ">
-  <!-- Keep it here might be useful in the future -->
-  <!-- ./assets/portrait/820.jpg  -->
+	<div class="pattern"></div>
+	<img
+		alt="portrait of Etienne"
+		priority
+		srcset="./assets/portrait/205.jpg 400w, ./assets/portrait/410.jpg 790w"
+	/>
+	<!-- Keep it here might be useful in the future -->
+	<!-- ./assets/portrait/820.jpg  -->
 </div>
