--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,9 +1,15 @@
 <h2>Projects</h2>
 
-Feel free to visit my GitHub profile to see more projects: <a href="https://github.com/ice-blaze/">&#64;ice-blaze</a>
+Feel free to visit my GitHub profile to see more projects:
+<a href="https://github.com/ice-blaze/">&#64;ice-blaze</a>
 
 <div class="projects">
-  <!-- TODO add cards related to angular contributions and ESLINT, webnugget, keebord -->
-  <app-card></app-card>
-  <app-card></app-card>
+	<!-- TODO add cards related to angular contributions and ESLINT, webnugget, keebord -->
+	@for (project of projects; track $index) {
+		<app-card
+			[image]="project.image"
+			[text]="project.text"
+			[url]="project.url"
+		/>
+	}
 </div>
