feat: projects cards and grid and content

--- a/src/app/projects/card/card.component.html
+++ b/src/app/projects/card/card.component.html
@@ -1,7 +1,8 @@
-<a [href]="url">
+<a [href]="url" [attr.data-tooltip]="text">
 	<div class="card">
-		<!-- <div>{{image}}</div> -->
-		<!-- <div>title</div> -->
+		<div class="center">
+			<img [class.large]="large" [src]="image" alt="" aria-hidden="true" />
+		</div>
 		<div class="text">{{ text }}</div>
 	</div>
 </a>
