--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,6 +1,13 @@
+:host{
+	max-width: 800px;
+	width: 100%;
+}
+
 .projects {
-	display: flex;
 	padding-top: 1rem;
 	padding-bottom: 2rem;
-	gap: 2rem;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(257px, 1fr));
+	gap:2rem;
 }
+
