--- a/src/app/projects/card/card.component.html
+++ b/src/app/projects/card/card.component.html
@@ -2,10 +2,10 @@
 	<div class="card">
 		<div class="center">
 			<div
+				aria-hidden="true"
 				class="image"
 				[class.large]="large"
-				[style.background-image]="'url(' + image + ')'"
-				aria-hidden="true"
+				[appBackgroundImage]="image"
 			></div>
 		</div>
 		<div class="text">{{ text }}</div>
