--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -3,10 +3,12 @@
 :host {
 	max-width: 600px;
 }
+
 li {
 	padding: 1rem;
 	text-align: justify;
 }
+
 li::marker {
 	color: variables.$mainColor;
 	content: ">";
@@ -14,4 +16,8 @@ li::marker {
 	font-weight: 900;
 	font-family: monospace;
 	font-size: 1.3rem;
+}
+
+ul {
+	padding-left: 1rem;
 }
