--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -9,4 +9,5 @@
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(257px, 1fr));
 	gap: 2rem;
+	margin-right: 0.5rem; // simulate angular margin
 }
