--- a/src/app/experiences/experiences.component.html
+++ b/src/app/experiences/experiences.component.html
@@ -37,7 +37,7 @@
 	<li class="experience">
 		<div class="company">
 			<a href="https://www.nagra.com/">NAGRA</a>, Kudelski Group | January 2020
-			– 2020
+			– August 2020
 		</div>
 		<div class="position bold">System Validation Engineer</div>
 		<div class="details">
@@ -52,7 +52,8 @@
 
 	<li class="experience">
 		<div class="company">
-			<a href="https://www.he-arc.ch/en/">HE-Arc</a> | November 2016 – 2019
+			<a href="https://www.he-arc.ch/en/">HE-Arc</a> | December 2016 – December
+			2019
 		</div>
 		<div class="position bold">AI Research Assistant</div>
 		<div class="details">
@@ -73,7 +74,8 @@
 
 	<li class="experience">
 		<div class="company">
-			<a href="https://bluestar.solutions/">Bluestar</a> | May 2016 – 2016
+			<a href="https://bluestar.solutions/">Bluestar</a> | May 2016 – November
+			2016
 		</div>
 		<div class="position bold">Business Software Developer</div>
 		<div class="details">
