--- a/src/app/experiences/experiences.component.scss
+++ b/src/app/experiences/experiences.component.scss
@@ -15,7 +15,9 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
-	padding: 1rem 0;
+}
+.experience:not(:last-child) {
+	padding-bottom: 1rem;
 }
 
 .details li {
