fix: add bold and color to main word in projects

--- a/src/app/projects/card/card.component.html
+++ b/src/app/projects/card/card.component.html
@@ -8,6 +8,6 @@
 				[appBackgroundImage]="image"
 			></div>
 		</div>
-		<div class="text">{{ text }}</div>
+		<div class="text" [innerHTML]="text"></div>
 	</div>
 </a>
