--- a/src/app/projects/card/card.component.scss
+++ b/src/app/projects/card/card.component.scss
@@ -66,3 +66,8 @@ a {
 	line-height: 1.3;
 	padding-top: 0.5rem;
 }
+
+:host ::ng-deep .title {
+	color: variables.$mainColor;
+	font-weight: bold;
+}
