--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -8,6 +8,10 @@ li:not(:last-child) {
 	padding-bottom: 1rem;
 }
 
+li {
+	padding-left: 1rem;
+}
+
 li::marker {
 	color: variables.$mainColor;
 	content: ">";
