fix: skills bullet for webkit

--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -10,11 +10,11 @@ li:not(:last-child) {
 
 li {
 	padding-left: 1rem;
+	list-style-type: ">";
 }
 
 li::marker {
 	color: variables.$mainColor;
-	content: ">";
 	font-size: large;
 	font-weight: 900;
 	font-family: monospace;
