--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -2,5 +2,5 @@
 <p>
 	<span class="bold">Frontend developer</span> ~ Clean code Enthusiate ~
 	Curiosity hoarder ~ Movie enjoyer ~ Photographer hobbist ~ Web articles digger
-	~ linter advocate
+	~ Linter advocate
 </p>
