Fix first line space in skills list
The first line had some space but it was especially visible on firefox
and safari.

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,18 +1,24 @@
 <h2>Skills</h2>
 <ul>
 	<li>
-		<span class="bold"> Frontend: </span>
-		Angular expert, TypeScript/ECMAScript poet, CSS wizard, accessibility-first
-		thinker, npm lover, website performance aficionado
+		<p>
+			<span class="bold"> Frontend: </span>
+			Angular expert, TypeScript/ECMAScript poet, CSS wizard,
+			accessibility-first thinker, npm lover, website performance aficionado
+		</p>
 	</li>
 	<li>
-		<span class="bold"> General: </span>
-		Git guru, Clean code enthusiat, VI typist, Software bookworm, Server
-		environment navigator, Open-Source enjoyer, linter advocate, web security
-		defender
+		<p>
+			<span class="bold"> General: </span>
+			Git guru, Clean code enthusiat, VI typist, Software bookworm, Server
+			environment navigator, Open-Source enjoyer, linter advocate, web security
+			defender
+		</p>
 	</li>
 	<li>
-		<span class="bold"> Backend: </span>
-		SQL fundamentals, RESTful, Fullstack out-of-practice
+		<p>
+			<span class="bold"> Backend: </span>
+			SQL fundamentals, RESTful, Fullstack out-of-practice
+		</p>
 	</li>
 </ul>
