fix: svg with cleaner version

--- a/src/app/picture/picture.component.html
+++ b/src/app/picture/picture.component.html
@@ -1,8 +1,9 @@
 <div class="container">
-	<div class="pattern"></div>
+	<app-pattern class="pattern" />
 	<img
-		alt="portrait of Etienne"
+		alt="Portrait of Etienne"
 		priority
+		id="portrait"
 		srcset="./assets/portrait/205.jpg 400w, ./assets/portrait/410.jpg 790w"
 	/>
 	<!-- Keep it here might be useful in the future -->
